public/app/grid.css
/* If a style would be needed for exporting the map to an image, put it here. */

.the-map {
  transform-origin: top left;
  display: inline-block;
  cursor: crosshair;
  overflow: hidden;
  position: relative;
  z-index: 0;
  background-color: rgb(245, 245, 220);
}

.the-map * {
  box-sizing: border-box;
}

.tile {
  position: absolute;
  clip-path: inset(0);
  -webkit-clip-path: inset(0);
}

.tile-map {
  position: absolute;
  width: 100%;
  height: 100%;
}

.tile-image {
  position: absolute;
  bottom: 0;
  right: 0;
  visibility: hidden;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: crisp-edges;
}

.layer {
  position: absolute;
  width: 100%;
  height: 100%;
  background-clip: padding-box;
  pointer-events: none;
}

.widget-layer {
  z-index: 10;
}

.grid-layer {
  display: inline-block;
  z-index: 10;
  pointer-events: auto;
}

.mask-layer {
  z-index: 9;
}

.gmoverlay-layer {
  z-index: 8;
  display: none;
}

.editor-view .gmoverlay-layer {
  display: inherit;
}

.text-layer {
  z-index: 7;
}

.separators-layer {
  z-index: 6;
}

.images-layer {
  z-index: 5;
}

.shapes-layer {
  z-index: 4;
}

.stairs-layer {
  z-index: 3;
}

.walls-layer {
  z-index: 2;
  filter: drop-shadow(2px 2px 3px #919191);
}

.floors-layer {
  z-index: 1;
}

.grid-cell {
  position: absolute;
  display: inline-block;
  border-right: 1px solid rgba(0, 0, 0, 0);
  border-bottom: 1px solid rgba(0, 0, 0, 0);
}

.wall-cell {
  position: absolute;
}

.floor-cell {
  position: absolute;
  border-right: 1px solid;
  border-bottom: 1px solid;
  background-color: rgb(245, 245, 220);
  border-color: bisque;
}

.separator-cell {
  position: absolute;
}

.image-cell {
  position: absolute;
}

.shape-cell {
  position: absolute;
}

.stairs-cell {
  position: absolute;
  margin: 0 1px 1px 0;
}

.text-cell {
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  text-align: center;
  margin: 2px 3px 3px 2px;
  white-space: pre-wrap;
}



.primary-cell {
  width: 25px;
  height: 25px;
}

.corner-cell {
  width: 7px;
  height: 7px;
}

.vertical-cell {
  width: 7px;
  height: 25px;
}

.horizontal-cell {
  width: 25px;
  height: 7px;
}

.selected-cell {
  background-color: rgba(223, 219, 229, 0.25);
  z-index: 2;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%239C92AC' fill-opacity='0.15'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
}

.square-cell-primary, .square-cell-vertical, .square-cell-horizontal,
.circle-cell-primary, .circle-cell-vertical, .circle-cell-horizontal {
  margin: -1px -0px -0px -1px;
}

.square-cell-primary, .circle-cell-primary {
  z-index: 1;
}

.square-cell-vertical, .square-cell-horizontal, .circle-cell-vertical,
.circle-cell-horizontal {
  z-index: 0;
}

.square-cell-corner, .circle-cell-corner {
  margin: -8px -7px -7px -8px;
  z-index: 2;
  background: rgb(255, 0, 0) !important;
}

.square-cell-0 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 20 6, 20 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-1 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-2 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 27 6, 27 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-3 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 6, 27 6, 27 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-4 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 20 6, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-5, .circle-cell-5 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-6 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 27 6, 27 20, 20 20, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-7 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 6, 27 6, 27 20, 20 20, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-8 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 20 6, 20 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-9 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 6 6, 6 -2, 20 -2, 20 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-10, .circle-cell-10 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 27 6, 27 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}
/* ... */

